[package]
name = "keynest"
version = "0.1.0"
edition = "2024"
description = "Simple, offline, cross-platform secrets manager written in Rust"
repository = "https://github.com/capydev42/keynest"
keywords = ["secrets", "password", "encryption", "vault", "cli", "rust", "security", "cryptography", "argon2"]
categories = ["command-line-utilities", "cryptography", "security"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
atty = "0.2.14"
chacha20poly1305 = "0.10.1"
chrono = "0.4.43"
clap = {version = "4.5.55", features = ["derive", "env"]}
directories = "6.0.0"
getrandom = "0.4.1"
rpassword = "7.4.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3.24.0"
predicates = "3.1.4"
assert_cmd = "2.1.2"

